# securityforge

./: .editorconfig  .gitignore  API_DOCUMENTATION.md  API_TESTING_GUIDE.md  BLOG_POST.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_FINAL_REPORT.md  DOCKER.md  Dockerfile  ENHANCED_DETECTION_REPORT.md  FINAL_ACCURACY_REPORT.md  GITHUB_FEATURE_ANNOUNCEMENT.md  GITHUB_UPLOAD_GUIDE.md  OWASP_TOP10_COVERAGE.md  PAYLOAD_DATABASE_COVERAGE.md  QUICKSTART.md  README.ja.md  README.md  RELEASE_NOTES.md  SECURITY.md  SHARE_WITH_TEAM.md  WAF_DETECTION_ACCURACY_REPORT.md  docker-compose.yml  easy_payload_creator.py  mcp.json  payload_generator.py  pyproject.toml  report_generator.py  requirements.txt  server.json  smithery.yaml  test_100_output.txt  test_200_output.txt  test_results_100.json  test_results_200.json  test_results_enhanced_100.json  test_targets_100.txt  test_targets_200.txt  test_targets_enhanced_100.txt  test_targets_extended.txt  (+5 more)
.github/: FUNDING.yml  README.md  banner.html  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  payload_submission.md
.github/workflows/: cve-monitor.yml  publish.yml
assets/: README.md  SCREENSHOT_GUIDE.md
assets/screenshots/: .gitkeep
docs/: ai-security-guide.md  api-documentation.md  authentication-guide.md  aws-azure-waf-research.md  chatgpt-guide.md  claude-code-guide.md  cloud-waf-advanced-research.md  cve-real-world-bypasses.md  demo.cast  demo.tape  docker.md  easy-payload-guide.md  multi-target-guide.md  owasp-api-security.md  owasp-complete-coverage.md  owasp-llm-top10.md  owasp-mobile-top10.md  owasp-top10.md  payload-classification.md  payload-database-coverage.md  poc-simulation-guide.md  quickstart.md  release-notes-v1.md  release-notes-v2.md  report-guide.md  scanning-guide.md  waf-detection-guide.md  waf-detection-research.md  waf-recommendations-guide.md
examples/: analyze_enhanced_results.py  api_example.py  demo.sh  generate_sample_reports.py  targets.txt.example
fray/: __init__.py  ai_bypass.py  bounty.py  ci.py  cli.py  config.py  cred.py  csp.py  leak.py  learn.py  monitor.py  mutator.py  osint.py  recon.py  reporter.py  scanner.py  smuggling.py  tester.py  update.py
fray/payloads/host_header_injection/: cache_poisoning.json  password_reset_poisoning.json
fray/recon/: __init__.py  _monolith.py  checks.py  discovery.py  dns.py  fingerprint.py  http.py  pipeline.py
payloads/ai_prompt_injection/: indirect_injection.json  jailbreaks.json  prompt_leaking.json
payloads/csp_bypass/: base_injection.json  dangling_markup.json  data_uri.json  jsonp_callback.json  nonce_leakage.json  object_injection.json  unsafe_eval.json  unsafe_inline.json
payloads/llm_testing/: bias_detection.txt
payloads/modern_bypasses/: 2025_2026_techniques.json
payloads/web_shells/: asp_shells.txt  jsp_shells.txt  php_shells.txt  python_shells.txt
payloads/xss/: xss_advanced.txt
scripts/: add_cve_payloads.py  cve_checker.py  cve_monitor.py
securityforge/: __init__.py  cli.py  detector.py  mcp_server.py  payload_generator.py  reporter.py  tester.py
securityforge/payloads/ai_prompt_injection/: excessive_agency.json  llm_supply_chain.json  misinformation.json  unbounded_consumption.json  vector_embedding_attacks.json
securityforge/payloads/api_security/: business_flow_abuse.json  inventory_management.json
securityforge/payloads/command_injection/: advanced.json  comprehensive.json
securityforge/payloads/crlf_injection/: basic.json  comprehensive.json
securityforge/payloads/crypto_failures/: weak_crypto.json
securityforge/payloads/file_upload/: upload_bypass.txt
securityforge/payloads/iot_rce/: CVE-2026-27509-dds-rce.json  CVE-2026-27510-mobile-db-rce.json  README.md
securityforge/payloads/ldap_injection/: basic.json  comprehensive.json
securityforge/payloads/llm_testing/: advanced_attacks.txt  adversarial_prompts.txt  data_leakage.txt
securityforge/payloads/logging_failures/: log_injection.json
securityforge/payloads/modern_bypasses/: advanced_variations.json
securityforge/payloads/open-redirect/: comprehensive.json  general.json
securityforge/payloads/other/: general.json
securityforge/payloads/path_traversal/: advanced.json  (+2 more)
tests/: test_bypass.py  test_ci_learn.py  test_csp.py  test_diff.py  test_end_to_end.py  test_hardening.py  test_integration_complete.py  test_package.py  test_recon.py  test_scanner.py  test_scope.py  test_smuggling.py  test_validate_bounty.py  test_vulnerable_app.py
(+33 files in other folders)
