[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fray"
version = "3.0.0"
description = "Open-source WAF Security Testing Platform — 5,500+ attack payloads, 25 WAF fingerprints, zero dependencies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "DALI Security", email = "soc@dalisec.io"}
]
keywords = [
    "security", "waf", "penetration-testing", "owasp", "xss", "sqli",
    "web-security", "payload", "firewall", "cybersecurity", "offensive-security",
    "vulnerability", "waf-bypass", "fray"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.2.0"]

[project.urls]
Homepage = "https://github.com/dalisecurity/fray"
Documentation = "https://github.com/dalisecurity/fray/tree/hugo/docs"
Repository = "https://github.com/dalisecurity/fray"
Issues = "https://github.com/dalisecurity/fray/issues"
Blog = "https://dalisec.io/research/blog-fray-launch.html"

[project.scripts]
fray = "fray.cli:main"

[tool.setuptools.packages.find]
include = ["fray*"]

[tool.setuptools.package-data]
fray = ["payloads/**/*.json", "payloads/**/*.txt", "payloads/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
